--- a/static/demo.html
+++ b/static/demo.html
@@ -26,7 +26,7 @@
   <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="/css/base.css" />
   <link rel="stylesheet" href="/css/main.css" />
-  <script src="/js/rtcgraph.min.js", type="text/javascript"></script>
+  <script src="/js/rtcgraph.js", type="text/javascript"></script>
 </head>
 
 <body>
