--- a/static/rtt.html
+++ b/static/rtt.html
@@ -4,7 +4,7 @@
 		<title>Round Trip Delay Time</title>
 		<script src="/js/Chart.min.js"></script>
 		<script src="/js/jquery-1.11.3.min.js"></script>
-		<script src="/js/rtcgraph.min.js", type="text/javascript"></script>
+		<script src="/js/rtcgraph.js", type="text/javascript"></script>
 	</head>
 	<body>
 		<div style="width:40%">
