adding adhoc graph page + api

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -47,7 +47,7 @@
 	      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Visualize<span class="caret"></span></a>
 	      <ul class="dropdown-menu sub-menu">
 	        <li><a href="/dashboard/realtime.html">Realtime Graphs</a></li>
-		<li><a href="#">Custom Graphs</a></li>
+		<li><a href="/dashboard/custom.html">Custom Graphs</a></li>
 	      </ul>
 	    </li>
             <li><a href="/demo">Demo</a></li>
